--- a/tp_app/index.html
+++ b/tp_app/index.html
@@ -1,4 +1,4 @@
-CREATE DATABASE sistema_asistencia;
+<!--CREATE DATABASE sistema_asistencia;
  USE sistema_asistencia;
 CREATE TABLE alumnos (
   id INT PRIMARY KEY,
@@ -22,8 +22,8 @@ INSERT INTO alumnos (id, apellido, nombre) VALUES
 
 
 -ES SQL- ARRIBA 
-
-
+//
+-->
 
 
 
@@ -45,6 +45,43 @@ INSERT INTO alumnos (id, apellido, nombre) VALUES
  <th>nombre</th>
  <th>acciones</th>
  
+<div class="contenedor">
+ 
+
+<div class="bloqueizquierda">
+  <h2>Selecciona un curso</h2>
+  <select id="curso">
+      <option value="">Selecciona un curso</option>
+      <option value="curso1">4°1</option>
+      <option value="curso2">4°2</option>
+      <option value="curso3">4°3</option>
+      <option value="curso3">4°4</option>
+      <option value="curso3">4°5</option>
+  </select>
+ 
+</div>
+ 
+
+<div class="bloquederecha">
+  <h2>Selecciona una materia</h2>
+  <select id="materia">
+      <option value="">Selecciona una materia</option>
+      <option value="matematica">Matemática</option>
+      <option value="lengua">Lengua y Literatura</option>
+      <option value="historia">Historia</option>
+      <option value="ciencias">Geografia</option>
+      <option value="ciencias">Proyecto informatico I</option>
+      <option value="ciencias">Base de datos</option>
+      <option value="ciencias">Laboratorio de Algoritmos y Estructura de datos</option>
+  </select>
+             </select>
+         </div>
+ 
+     </div>
+ 
+ </body>
+ </html>
+
 
  </thead>
  </table>   
