Update HTML structure and SQL commentsact

--- a/tp_app/index.html
+++ b/tp_app/index.html
@@ -49,10 +49,10 @@ CREATE TABLE cursos (
  
  <table>
   <thead>
- <th>id</th>
- <th>apellido</th>
- <th>nombre</th>
- <th>acciones</th>
+ <th>ID</th>
+ <th>Apellido</th>
+ <th>Nombre</th>
+ <th>Asistencia</th>
  
 <div class="contenedor">
  
@@ -102,4 +102,5 @@ CREATE TABLE cursos (
 </body>
 
 </html>
+
 
