--- a/tp_app/index.html
+++ b/tp_app/index.html
@@ -30,7 +30,7 @@ CREATE TABLE cursos (
 
 
 
--ES SQL- ARRIBA 
+-ES SQL- ARRIBA (RECORDATORIO)
 //
 -->
 
@@ -102,5 +102,6 @@ CREATE TABLE cursos (
 </body>
 
 </html>
+
 
 
