--- a/tp_app/index.html
+++ b/tp_app/index.html
@@ -1,4 +1,10 @@
-<!--CREATE DATABASE sistema_asistencia;
+<!--
+INSERT INTO materias VALUES (NULL,9,'DE LA PUENTE',0,'ALGORITMOS',19);
+INSERT INTO cursos VALUES (null,4,2,'computacion');
+
+
+
+CREATE DATABASE sistema_asistencia;
  USE sistema_asistencia;
 CREATE TABLE alumnos (
   id INT PRIMARY KEY,
@@ -102,6 +108,7 @@ CREATE TABLE cursos (
 </body>
 
 </html>
+
 
 
 
